# software-engineering-product-topteam

./: .gitignore  CMakeLists.txt  README.md  assignStudentsToTeachersClasses.py  assignStudentsToTeachersClasses.sln  backend-MT.sln  index.html  input.txt
.github/workflows/: ci.yml
Docker/: Dockerfile  backend.dockerfile  docker-compose.yml  proxy.dockerfile
Documentatie/: DescriereFluxAplicatie.docx  Model baza de date.docx  ProductFeatures.docx  ProductVision.docx  UserPersonas.docx  UserStories.docx
FrontEND/frontend/: package-lock.json  package.json
Project-FrontEnd/: README.md  package-lock.json  package.json  tailwind.config.js
Project-FrontEnd/src/: App.tsx  index.css
Proxy/: LoadBalancer.h  Logger.h  index.html  main.cpp
assignStudentsToTeachersClasses/: Program.cs
backend-MT/: ApplicationDbContext.cs  Program.cs  backend-MT.csproj
backend-MT.Tests/: .gitignore  README.md  backend-MT.Tests.csproj
backend-MT.Tests/IntegrationTests/: AbonamentControllerTests.cs  CursControllerTests.cs  CustomWebApplicationFactory.cs  DisponibilitateControllerTests.cs  MaterialControllerTests.cs  MesajControllerTests.cs  NotificareControllerTests.cs  ParticipareGrupaControllerTests.cs  PlataControllerTests.cs  PredareControllerTests.cs  PrezentaControllerTests.cs  RaspunsTemaControllerTests.cs  SedintaControllerTests.cs  SupportControllerTests.cs  TemaControllerTests.cs  TestAuthHandler.cs  UserControllerTests.cs
backend-MT.Tests/PerformanceTests/: PerformanceTests.csproj  load-test.js  soakTest.js  stressTest.js
backend-MT/Controllers/: AbonamentController.cs  (+18 more)
(+240 files in other folders)
